@@ -6,6 +6,7 @@ bad_md5 = [
 good_md5 = [
         '511710993e03c55825635054cb0dd592',
         'cba4706cb25807e9a80edcc3673016a2',
+        'd2593f51466c33fe9f0f847d715da9e6',
         'sentinel'
 ]
 
