@@ -5,6 +5,7 @@ bad_md5 = [
 
 good_md5 = [
         '3435bc6a26f39f41e5fbe7427545362c',
+        '6c37d4e21d514f4b9ddcc4f548b90b6d',
         '8dd639567738e695c7cdae4f14ac83fd',
         'sentinel'
 ]
