@@ -5,6 +5,7 @@ bad_md5 = [
 good_md5 = [
         '06b2878428d2ba1ada53400186f4e2ca',
         '6006416f8daa0b5860296a8da4923b3a',
+        'f5f58ea3cdcc5113d654ac2ed3d8df60',
         'sentinel'
 ]
 
