@@ -1,4 +1,5 @@
 bad_md5 = [
+        '0d709b205f6557b10ab52689f85ba010',
         'sentinel'
 ]
 
